--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,5 +4,10 @@ repos:
     hooks:
       - id: uv-lock
       - id: uv-export
-      - id: pip-compile
-        args: [requirements.in, -o, requirements.txt]
+
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.5.0
+    hooks:
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: double-quote-string-fixer
